# rust_minify

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Readme.md
.github/workflows/: ci.yml
src/: attr.rs  fix.rs  lib.rs  marker.rs
