[package]
name = "minify-rust"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
once_cell = "1.7"
fxhash = "0.2.1"

[dev-dependencies]
indoc = "1.0"
test-case = "1.1.0"
